Closed Bug 425249 Opened 16 years ago Closed 16 years ago

gfxWindowsPlatform::InitBadUnderlineList() is broken by bug 424018

Categories

(Core :: Graphics, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta5

People

(Reporter: masayuki, Assigned: masayuki)

References

Details

(Keywords: intl, regression)

Attachments

(1 file)

Attached patch Patch v1.0Splinter Review
The landing of bug 424018 delays to create the font entries. Therefore the all font entries doesn't initialized the |mIsBadUnderlineFont| member.
Flags: blocking1.9?
Attachment #311859 - Flags: review?(pavlov)
Attachment #311859 - Flags: review?(pavlov) → review+
Flags: blocking1.9? → blocking1.9+
-> FIXED
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Could this bug have caused bug 425658 as well?
You need to log in before you can comment on or make changes to this bug.