Bug 425249 gfxWindowsPlatform::InitBadUnderlineList() is broken by bug 424018 r+b1.9+a1.9b5=stuart