gfx/thebes/src/gfxWindowsFonts.cpp
@@ -203,6 +203,8 @@ FontFamily::FamilyAddStylesProc(const ENUMLOGFONTEXW *lpelfe,
         }
     }
 
+    fe->mIsBadUnderlineFont = ff->mIsBadUnderlineFont;
+
     // read in the character map
     logFont.lfCharSet = DEFAULT_CHARSET;
     HFONT font = CreateFontIndirectW(&logFont);
